--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,13 +45,23 @@ h6 {
   margin-bottom: 15px;
 }
 
-.page-section h3.section-subheading {
+.page-section h4.section-subheading {
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
-  margin-bottom: 75px;
+  margin-bottom: 60px;
   text-transform: none;
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+
+.skills {
+  margin-bottom : 50px;
+}
+
+.skills h3{
+  margin-bottom: 30px; 
+  margin-top: 20px;
 }
 
 @media (min-width: 768px) {
@@ -277,16 +287,22 @@ header.masthead .intro-text .intro-heading {
   margin: 0;
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+.portfolio-item .portfolio-caption {
+  
   max-width: 400px;
+  margin-top: 20px;
   margin: 0 auto;
   padding: 25px;
+  padding-right: 0; 
+  padding-left: 0; 
   text-align: center;
   background-color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
+ .portfolio-item .portfolio-caption h4 {
   margin: 0;
+  margin-bottom: 10px; 
+  font-size : 1.75rem; 
   text-transform: none;
 }
 
@@ -599,6 +615,8 @@ section#contact {
 
 section#contact .section-heading {
   color: #fff;
+  margin-top: 20px; 
+  margin-bottom: 20px;
 }
 
 section#contact .form-group {
@@ -678,7 +696,6 @@ ul.social-buttons li{
 
 ul.social-buttons li a {
   font-size: 20px;
-  line-height: 50px;
   display: block;
   width: 50px;
   height: 50px;
@@ -695,10 +712,14 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
   background-color: #fed136;
 }
 
+ul.social-buttons li a div {
+  margin-left: 60px;
+}
+
 .lead {
     margin-bottom: 20px;
-    font-size: 16.099999999999998px;
-    font-weight: 200;
+    font-size: 18px;
+    font-weight: 300;
     line-height: 1.4
 }
 
