--- a/view/templates/homePage.twig
+++ b/view/templates/homePage.twig
@@ -69,11 +69,11 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Mes compétences</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h4 class="section-subheading text-muted">Actuellement en cours de formation avec OpenClassrooms, j'acquiers de nouvelles connaissances régulièrement, et je me confronte fréquemment à de nouvelles problématiques.</h4>
         </div>
       </div>
-      <div class="row col-lg-12 text-center">
-        <div class="col-md-6">
+      <div class="row col-lg-12 text-center skills">
+        <div class="col-md-6 ">
           <h3 class="text-center">Langages de programmation</h3>
           {{ form.skillBar ('PHP', '30%')}}
           {{ form.skillBar ('JavaScript', '15%')}}
@@ -84,21 +84,25 @@
           {{ form.skillBar ('CSS', '50%')}}
         </div>
       </div>
-          <div class="col-md-12 text-center">
-            <h3 >Framwork, CRM et templating</h3>
+      <div class="row col-lg-12 text-center skills">
+          <div class="col-md-12">
+            <h3 >Framework, CRM et templating</h3>
           </div>
-          <div class="d-flex justify-content-md-center">
-            <div class="col-md-12 row text-center">
-            {{ form.skillBar ('Bootstrap', '30%', {class:'col-md-6'})}}
-            {{ form.skillBar ('Wordpress', '30%', {class:'col-md-6'})}}
-            {{ form.skillBar ('Moteur de templating Twig', '20%', {class:'col-md-6'})}}
+          <div class="col-md-12 row text-center justify-content-md-center">
+            <div class="col-md-6">
+            {{ form.skillBar ('Bootstrap', '30%')}}
+            {{ form.skillBar ('Wordpress', '30%')}}
+            </div>
+            <div class="col-md-6">
+            {{ form.skillBar ('Moteur de templating Twig', '20%')}}
+          </div>
           </div>
           </div>
         </div>
- 
+      </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted"> </p>
         </div>
       </div>
 
@@ -115,44 +119,47 @@
       
       <div class="col-md-12">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-9">
             <div class="row">
-              <form method="post" action="">
+              <form method="post">
                 <h3 class="section-heading">Formulaire de contact</h3>
-                {%if var.success == 1 %}
+                {%if session.success == 1 %}
                   <div class="alert alert-success"> Le mail a bien été envoyé
                   </div>
                 {%endif%}
+                {%if session.success == 2 %}
+                  <div class="alert alert-danger"> Echec de l'envoi : {{session.errors}}
+                  </div>
+                {%endif%}
                 <div class="row">
-
-                  {{form.input ('surname', 'votre prénom')}}
-                  {{form.input ('name', 'votre nom')}}
-                  {{form.input ('email', 'votre email', {col:'col-md-12', type:'email'})}}
+                  {{form.input ('surname', 'votre prénom', {value:session.inputs.surname})}}
+                  {{form.input ('name', 'votre nom', {value:session.inputs.name})}}
+                  {{form.input ('email', 'votre email', {col:'col-md-12', type:'email', value:session.inputs.email})}}
                 </div>
                   {{form.textarea ('message', 'votre message')}}
                 <div class="clearfix"></div>
                 <div class="col-lg-12 text-center">
                   <div id="success"></div>
-                  <button class="btn btn-primary btn-xl text-uppercase" type="submit">Envoyer</button>
+                  <button class="btn btn-primary btn-xl text-uppercase" type="submit" id="submitForm">Envoyer</button>
                 </div>
               </form>
             </div>   
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <ul class=" social-buttons">
               <li class="">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
+                <a href="https://www.linkedin.com/in/thomasbrumain/">
+                  <div class="fab fa-linkedin-in">Linkedin</div>
+                </a>
+              </li>
+              <li class="">
+                <a href="https://github.com/Aetius">
+                  <div class="fab fa-github">Github</div>
                 </a>
               </li>
               <li class="">
                 <a href="#">
-                  <i class="fab fa-github"></i>
-                </a>
-              </li>
-              <li class="">
-                <a href="#">
-                  <i class="fab fa-lien_cv"></i>
+                  <div class="fab fa-lien_cv">Mon CV</div>
                 </a>
               </li>
             </ul>
