--- a/view/templates/layoutFront.twig
+++ b/view/templates/layoutFront.twig
@@ -98,6 +98,7 @@
   <script src="/js/agency.js"></script>
   <script src="/js/contact_me.js"></script>
   <script src="/js/jqBootstrapValidation.js"></script>
+  <script src="/js/main.js"></script>
 
 
 </body>
