--- a/view/templates/layoutFront.twig
+++ b/view/templates/layoutFront.twig
@@ -3,7 +3,8 @@
 
 <head>
 
-  <meta charset="utf-8">
+  <meta charset="utf-8"
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Blog personnel Développeur PHP/JavaScript">
   <meta name="author" content="Thomas Brumain">
@@ -43,7 +44,7 @@
             <a class="test nav-link js-scroll-trigger" href="/">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="/portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/articles">Blog</a>
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/connexion">Connexion</a>
+            <a class="nav-link js-scroll-trigger" href="/connexion">Espace membre</a>
           </li>
         </ul>
       {% endblock %}
