--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -880,5 +880,40 @@ ul.social-buttons li a div {
     text-align: center;
     padding-top: 150px;
     padding-bottom: 100px;
+  }
+
+  .visibility{
+    visibility: hidden;
+  }
+
+/*//////////////////////////////////////// pages back /////////////////////////////////////////////////////////////*/
+
+/*navbar back*/
+.backNav{
+  background-color: white;
 }
+
+.fixed-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
