--- a/view/templates/user/connexionPage.twig
+++ b/view/templates/user/connexionPage.twig
@@ -1,4 +1,4 @@
-{% extends "layoutBack.twig" %}
+{% extends "layoutFront.twig" %}
 
 {% block title %}Connexion{% endblock %}
 
@@ -9,18 +9,30 @@
 
 <main>
 <section class="bg-light page-section">
-    <div class="container">
-		<div class="text-center m-lg-5">
-			<h1>Page connexion</h1>
+   
+    <div class="container"> 
+   
+		 <div class="intro-text col-12 row justify-content-center">
+		 
+        <h1 class="intro-heading text-uppercase p-5">Page connexion</h1>
+		
 		</div>
-		<div class="text-center m-lg-5">
-			<form method="post" action="">
-				
-				{{ form.input ('Login', 'Votre login', '1', '20', {autofocus:'autofocus'} )}}
-				{{ form.input ('Password', 'Votre mot de passe', '1', '20', {type: 'password'} )}}
 
+			<form method="post" action="">
+		<div class="text-center col-lg-12 row justify-content-center ">
+				<div class="row  mb-4 pb-2">
+				{{ form.input ('Login', 'Votre login', {autofocus:'autofocus'} )}}
+				{{ form.input ('Password', 'Votre mot de passe', {type: 'password'} )}}
+			</div>
+		</div>
+		<div class="row justify-content-center">
+				<div class="pr-3">
 				<button type="submit" >Envoyer</button>
+				</div>
+				<div class="pl-3">
 				<button type="reset">Réinitialiser</button>
+			</div>
+		</div>
 			</form>
 			<div class="text-center m-lg-5">
 			<p>Pas encore inscrit ?</p>
@@ -31,6 +43,7 @@
 			</div>
 
 		</div>
+
 	</section>
 </main>
 
