--- a/view/templates/user/inscriptionPage.Twig
+++ b/view/templates/user/inscriptionPage.Twig
@@ -1,4 +1,4 @@
-{% extends "layoutBack.twig" %}
+{% extends "layoutFront.twig" %}
 
 {% block title %}Inscription{% endblock %}
 
@@ -6,26 +6,55 @@
 
 {% import 'macro.twig' as form %}
 
-<main>
-<section class="bg-light page-section">
-    <div class="container">
-<h2>page inscription</h2> 
-<div class="row">
-<form method="post" action="inscription">
 
-{{ form.input ('Name', 'Votre prénom', '1', '20', {autofocus:'autofocus'} )}}
-{{ form.input ('Lastname', 'Votre nom', '1', '20')}}
-{{ form.input ('Mail', 'Votre adresse mail', '1', '20', {type:'email'})}}
-{{ form.input ('Login', 'Votre login', '1', '30')}}
-{{ form.input ('Password', 'Votre mot de passe', '', '40', {type:'password'} )}}
-{{ form.input ('PasswordConfirm', 'Veuillez confirmer votre mot de passe', '', '40', {type:'password'} )}}
-
-<button type="submit" >Envoyer</button>
-<button type="reset">Réinitialiser</button>
-</form>
-</form>
-
-</div>
+<section class="page-section" id="inscription">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center mt-5 mb-4">
+				<h1 class="section-heading text-uppercase">Inscription</h1>
+			</div>
+		</div>
+		<div class=" row justify-content-md-center">
+			<div class="col-md-10 ">
+				<div class="row">
+					<div class="row">
+						<form method="post">
+							{%if (var.errors is not null) %}
+								<div class="alert alert-danger"> 
+									<p>Echec de l'inscription : </p>
+									{% for value in var.errors.0|sort|reverse(true) %}
+										<li>
+											<ul>
+												{{value}}
+											</ul>
+										</li>
+									{% endfor%} 
+								</div>
+							{%endif%}
+							<div class="row ">
+								{{ form.input ('Name', 'Votre prénom',  {autofocus:'autofocus', value:var.saveInputUser.Name} )}}
+								{{ form.input ('Lastname', 'Votre nom', {value:var.saveInputUser.Lastname})}}
+								{{ form.input ('Mail', 'Votre adresse mail', {type:'email', value:var.saveInputUser.Mail})}}
+								{{ form.input ('Login', 'Votre login', {value:var.saveInputUser.Login})}}
+								{{ form.input ('Password', 'Votre mot de passe', {type:'password'} )}}
+								{{ form.input ('PasswordConfirm', 'Veuillez confirmer votre mot de passe', {type:'password'} )}}
+								<div class="visibility form-group">
+									<label>Cliquez ici</label>
+									<input type="checkbox" name="envoi" id="envoi" class="form-control" value="vrai">
+								</div>
+								<div class="clearfix"></div>
+								<div class="col-lg-12 text-center">
+									<div id="success"></div>
+									<button class="btn btn-primary btn-xl text-uppercase" type="submit" id="submitForm">Envoyer</button>
+									<button class="btn btn-primary btn-xl text-uppercase" type="reset">Réinitialiser</button>
+								</div>
+							</div>
+						</form>
+				 	</div>
+				</div>
+     		</div>
+    	</div>
+    </div>
 </section>
-    </main>
+
 {% endblock %}
