--- a/view/templates/layoutBack.twig
+++ b/view/templates/layoutBack.twig
@@ -29,38 +29,6 @@
 
 <body id="page-top">
 
-  {# <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Logo à mettre</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        {% block navbar %}
-        <ul class="navbar-nav text-uppercase ml-auto">
-          <li class="nav-item">
-            <a class="test nav-link js-scroll-trigger" href="/">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/articles">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/connexion">Connexion</a>
-          </li>
-        </ul>
-      {% endblock %}
-      </div>
-    </div>
-  </nav>
- #}
 
  <nav class="navbar navbar-expand-lg  fixed-top shadow" id="backNav">
             
@@ -161,17 +129,17 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline ">nom utilisateur à importer</span>
+                <span class="mr-2 d-none d-lg-inline ">{{session.access.login|capitalize}}</span>
                 <img class="img-profile rounded-circle" src="">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="/connexion/dashboard">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                  Activité
+                  Tableau de bord
                 </a>
                 
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="/connexion/settings">
                   <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                   Paramètres
                 </a>
