--- a/view/templates/user/inscriptionPage.Twig
+++ b/view/templates/user/inscriptionPage.Twig
@@ -22,7 +22,7 @@
 							{%if (var.errors is not null) %}
 								<div class="alert alert-danger"> 
 									<p>Echec de l'inscription : </p>
-									{% for value in var.errors.0|sort|reverse(true) %}
+									{% for value in var.errors|sort|reverse(true) %}
 										<li>
 											<ul>
 												{{value}}
@@ -45,7 +45,7 @@
 								<div class="clearfix"></div>
 								<div class="col-lg-12 text-center">
 									<div id="success"></div>
-									<button class="btn btn-primary btn-xl text-uppercase" type="submit" id="submitForm">Envoyer</button>
+									<button class="btn btn-primary btn-xl text-uppercase" type="submit">Envoyer</button>
 									<button class="btn btn-primary btn-xl text-uppercase" type="reset">Réinitialiser</button>
 								</div>
 							</div>
