--- a/views/templates/homePage.twig
+++ b/views/templates/homePage.twig
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="intro-text">
         <h1 class="intro-heading text-uppercase"> Développeur PHP junior </h1>
-        <p class="intro-lead-in">"Je débute, mais ca va saigner"</p>
+        <p class="intro-lead-in">"C'est parti"</p>
         <h3 class="intro-lead-in">Thomas Brumain</h3>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/#contact">Me contacter</a>
       </div>
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Mes compétences</h2>
+          <h2 class="section-heading text-uppercase">Mes compétences</h2> 
           <h4 class="section-subheading text-muted">Actuellement en cours de formation avec OpenClassrooms, j'acquiers de nouvelles connaissances régulièrement, et je me confronte fréquemment à de nouvelles problématiques.</h4>
         </div>
       </div>
