--- a/views/article/createArticle.twig
+++ b/views/article/createArticle.twig
@@ -4,6 +4,7 @@
 {% block title %}{% if results.title != null and display.success.2 == null %}Modification de l'article : {{results.title}} {% else %} Création de l'article {% endif %}{% endblock %}
 
 {% import 'macro.twig' as form %}
+
 {% block content %}
 	<div class="articles">
 		<div class="container">
@@ -17,7 +18,7 @@
 			<div class="col-md-12 row">
 				
 				<div class="col-md-12 text-center">
-						<form method="post">
+						<form method="post">{{csrf_input()}} 
 							<div class="text-center"> 
 							{%if display.success.1 %}
 				                <div class="alert alert-success"> {{display.success.1}}
@@ -34,6 +35,7 @@
 				                	</ul>
 				            	</div>
 				            {%endif%}
+							
 							<div class="row">
 								<div class="col-md-5 text-right">	
 									{{ form.input ('Title', 'Titre de l\'article', {value:results.title})}}
