--- a/views/article/admin/create.twig
+++ b/views/article/admin/create.twig
@@ -38,15 +38,15 @@
 							
 							<div class="row">
 								<div class="col-md-5 text-right">	
-									{{ form.input ('Title', 'Titre de l\'article', {value:results.title})}}
+									{{ form.input ('title', 'Titre de l\'article', {value:results.title})}}
 								</div>
 								<div class="col-md-6 text-left">
-									{{ form.textarea ('Description', 'Résumé de l\'article', {value:results.description} )}}
+									{{ form.textarea ('description', 'Résumé de l\'article', {value:results.description} )}}
 
 								</div>
 							</div>
 							<div >
-									{{ form.textarea ('Content', 'Contenu de l\'article', {value:results.content, class:'tinyMCE'})}}
+									{{ form.textarea ('content', 'Contenu de l\'article', {value:results.content, class:'tinyMCE'})}}
 							</div>
 							<div>
 								<div class="col-md-12 text-center">
