--- a/views/article/dashboardPage.twig
+++ b/views/article/dashboardPage.twig
@@ -43,7 +43,7 @@
 														<button class="btn btn-primary text-align" type="submit" name="Update" value={{value.id}}>Modifier l'article</button>
 													</form>
 													<form method="POST" class="text-right pr-3"> {{csrf_input()}} 
-														<button class="btn btn-primary " type="submit" name="Delete" value={{value.id}}>Supprimer l'article</button>
+														<button class="btn btn-primary confirmClose" type="submit" name="Delete" value={{value.id}}>Supprimer l'article</button>
 													</form>
 												</div>
 											</div>
