--- a/views/templates/layoutFront.twig
+++ b/views/templates/layoutFront.twig
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="/#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/connexion">Espace membre</a>
+            <a class="nav-link js-scroll-trigger" href="/admin">Espace membre</a>
           </li>
         </ul>
       {% endblock %}
