--- a/views/user/inscriptionPage.Twig
+++ b/views/user/inscriptionPage.Twig
@@ -32,12 +32,12 @@
 								</div>
 							{%endif%}
 							<div class="row ">
-								{{ form.input ('Name', 'Votre prénom',  {autofocus:'autofocus', value:results.saveInputUser.Name} )}}
-								{{ form.input ('Lastname', 'Votre nom', {value:results.saveInputUser.Lastname})}}
-								{{ form.input ('Mail', 'Votre adresse mail', {type:'email', value:results.saveInputUser.Mail})}}
-								{{ form.input ('Login', 'Votre login', {value:results.saveInputUser.Login})}}
-								{{ form.input ('Password', 'Votre mot de passe', {type:'password'} )}}
-								{{ form.input ('PasswordConfirm', 'Veuillez confirmer votre mot de passe', {type:'password'} )}}
+								{{ form.input ('name', 'Votre prénom',  {autofocus:'autofocus', value:results.saveInputUser.name} )}}
+								{{ form.input ('lastname', 'Votre nom', {value:results.saveInputUser.lastname})}}
+								{{ form.input ('email', 'Votre adresse email', {type:'email', value:results.saveInputUser.email})}}
+								{{ form.input ('login', 'Votre login', {value:results.saveInputUser.login})}}
+								{{ form.input ('password', 'Votre mot de passe', {type:'password'} )}}
+								{{ form.input ('passwordConfirm', 'Veuillez confirmer votre mot de passe', {type:'password'} )}}
 								<div class="visibility form-group">
 									<label>Cliquez ici</label>
 									<input type="checkbox" name="envoi" id="envoi" class="form-control" value="vrai">
