--- a/views/user/settingsPage.twig
+++ b/views/user/settingsPage.twig
@@ -8,101 +8,89 @@
 
 <main>
 
-<section class="bg-light page-section">
-    <div class="container col-lg-12 m-lg-3">
-		<h1 class="text-center">Espace personnel test</h1> 
-	</div>
- 	<div class="container">	
- 		<div class="row col-md-12">
-			<div class="col-md-12 text-center">
-				{%if session.success == 1 %}
-	                  <div class="alert alert-success"> La modification a bien été prise en compte
-	                  </div>
-	                {%endif%}
-	            {%if (results.errors is not null) %}
-					<div class="alert alert-danger"> 
-						<p>Echec de l'inscription : </p>
-						<div class="text-left">
-							{% for value in results.errors|sort|reverse(true) %}
-								<li>
-									<ul>
-										{{value}}
-									</ul>
-								</li>
-							{% endfor%} 
-						</div>
-					</div>
-				{%endif%}
-			</div>
-			<div class="col-md-4">
-				<p class="m-md-1"> Bonjour {{session.user.name|upper}} </p>
-			</div>
-			<div class="col-md-8"> 
-				<div class="row">
-					<div class="col-md-12 m-lg-5">
-						<h4>Changement de votre mail</h4>
-					</div>
-					<div class="col-md-6">
-						<div >
-							<p class="text-center"> Votre adresse mail actuelle :</p>
-							<p class="text-center">{{session.user.mail}}</p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<p class="text-center">Votre nouvelle adresse mail :</p>
-						<form method="post" action="">
-							 {{form.input ('Mail', 'votre email', {col:'col-md-12', type:'email', value:session.inputs.email})}}
-
-							<div class="d-flex justify-content-center">
-								<button class="btn btn-primary text-right" type="submit" >Modifier</button>
-							</div>
-						</form>
-					</div>
-				</div>
-				<form method="post" action="">
-					<div class="row"> 
-						<div class="col-md-12 m-lg-5">
-							<h4>Changement de votre mot de passe</h4>
-						</div>
-						<div class="row col-md-12">
-							 <div class="d-flex justify-content-center col-md-6">
-							 	<p>Votre ancien mot de passe</p>
-							</div>
-								 {{form.input ('oldPassword', 'votre mot de passe', {col:'col-md-6', type:'password'})}}
-						</div>
-						<div class="row col-md-12">
-							<div class="d-flex justify-content-center col-md-6">
-						 		<p>Votre nouveau mot de passe</p>
-							</div>
-					 		{{form.input ('Password', 'votre mot de passe', {col:'col-md-6', type:'password'})}}
-						 </div>
-						 <div class="row col-md-12">
-						  	<div class="d-flex justify-content-center col-md-6">
-						 		<p>Confirmez votre mot de passe</p>
-							</div>
-						 	{{form.input ('PasswordConfirm', 'confirmation', {col:'col-md-6', type:'password'})}}
-						</div>
-					</div>
-						<div class="text-right ">
-							<button class="btn btn-primary mt-4" type="submit" >Modifier</button>
-						</div>
-				</form>
-			
-				<div class="m-lg-5">
-					<h4>Suppression de votre compte </h4>
-						<p class="text-right">(Cette action est irréversible)</p>
-				</div>
-				<div class="row">
-					<div class="text-right ">
-						<form method="post">
-							<button class="btn btn-primary" type="submit" name="Delete" value="true">Supprimer</button>
-						</form>
-					</div>
-				</div>
-			</div>
+	<section class="bg-light page-section text-center">
+	    <div class=" col-md-2 align-self-start">
+			<button class="btn btn-primary backButton"> Retour</button>
 		</div>
-  	</div>
-</section>
+
+	    <div class="container col-lg-12 m-lg-3">
+			<h1 class="text-center">Espace personnel {% if session.user.role == admin %} administrateur {% else %} éditeur {% endif %}</h1> 
+		</div>
+	 	<div class="">	
+	 		<div class=" col-md-12 my-5">
+				<div class="col-md-12 text-center">
+					{% include 'success.twig' %} 
+				</div>
+				
+				<div class="col-md-4">
+					<h2 class="text-center"> Bonjour {{session.user.name|title}} </h2>
+				</div>
+				<div class="col-md-12  my-5 py-3 bg-white"> 
+					<div class="col-md-12 text-center my-5">
+						<h4>Changement de votre email</h4>
+					</div>
+					<div class="col-md-12 row">
+						<div class="col-md-4">
+							<p class="text-center"> Votre adresse email actuelle :</p>
+							<p class="text-center">{{session.user.email}}</p>
+						</div>
+						<div class="col-md-5">
+							<p class="text-center">Votre nouvelle adresse email :
+							</p>
+							<form method="post" > {{ csrf_input() }}
+								 {{form.input ('email', 'votre email', {col:'col-md-12', type:'email', value:session.inputs.email})}}
+
+								<div class="d-flex justify-content-center py-4">
+									<button class="btn btn-primary text-center" type="submit" >Modifier</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-12  my-5">
+					<div class="col-md-12 text-center my-5">
+						<h4>Changement de votre mot de passe</h4>
+					</div>
+
+					<form method="post" action="">{{ csrf_input() }}
+						<div class="col-md-12">
+							<div class="row align-items-start">
+								<div class="col-md-6 flex-column text-center ">
+									<p>Votre ancien mot de passe
+									</p>
+									{{form.input ('oldPassword', 'votre mot de passe', {col:'col-md-10', type:'password'})}}
+								</div>
+								<div class="col-md-6 d-flex flex-column text-center ">
+							 		<p>Votre nouveau mot de passe
+							 		</p>
+						 			{{form.input ('password', 'votre mot de passe', {col:'col-md-10', type:'password'})}}
+							 		<p>Confirmez votre mot de passe
+							 		</p>
+							 		{{form.input ('passwordConfirm', 'confirmation du nouveau mot de passe', {col:'col-md-10', type:'password'})}}
+								</div>
+							</div>
+							<div class="d-flex justify-content-around ">
+								<button class="btn btn-primary mt-4" type="submit" >Modifier</button>
+							</div>
+						</div>
+					</form>
+				</div>
+				
+				<div class="col-md-12 my-5 py-5 bg-white">
+					<div class="text-center">
+						<h4>Suppression de votre compte </h4>
+						<p class="font-weight-light">(Cette action est irréversible)</p>
+					</div>
+					<div class="col-md-10 d-flex justify-content-end pt-3">
+						<form class="" method="post">{{ csrf_input() }}
+							<button class="btn btn-primary" type="submit" name="delete" value="true">Supprimer</button>
+						</form>
+					</div>
+				</div>
+			</div>
+	  	</div>
+	</section>
 
 </main>
 
