update admin files
update comments part (dashboardComment and in article)

--- a/views/article/admin/article.twig
+++ b/views/article/admin/article.twig
@@ -34,7 +34,9 @@
 							
 							<div class="text-center"> 
 {% include "success.twig" %}
-										
+
+
+<!-- article -->	
 								<form method="post">{{csrf_input()}} 
 									<div class="row">
 										<div class="col-md-5 text-right">	
@@ -77,7 +79,7 @@
 					
 
 
-	{# comments #}
+	<!-- comments -->
 					 
 						<div class="col-md-12 pl-5 mt-5 py-5 bg-light"> 
 							<h2 class="">Les commentaires</h2>
