--- a/views/comment/createComment.twig
+++ b/views/comment/createComment.twig
@@ -57,18 +57,19 @@
 {# comments #}
 				<div class="card-block text-center pt-5 ">	
 					{% for key, comments in results.comments %} 
-						<div class="card mb-3 px-3 py-2">
-							<p class="text-left">{{comments.author | title }} a écrit : </p> 
-							<div class="card-text text-justify pb-y">{{comments.comment | striptags('<br><p>')|raw}}
-							<p class="text-right">{{comments.date_comment}}</p> 
-								{% if comments.admin_answer != "" %}
-								<div class="card mb-3 mx-3 px-3 my-3 pt-3"> Réponse de {{ results.article.author }} :  
-									{{comments.admin_answer | striptags('<br><p>')|raw}}
-								</div>
-								{% endif %}
-							</div> 
-						</div>
-
+						{% if comments.publicated == 1 %}
+							<div class="card mb-3 px-3 py-2">
+								<p class="text-left">{{comments.author | title }} a écrit : </p> 
+								<div class="card-text text-justify pb-y">{{comments.comment | striptags('<br><p>')|raw}}
+								<p class="text-right">{{comments.date_comment}}</p> 
+									{% if comments.admin_answer != "" %}
+									<div class="card mb-3 mx-3 px-3 my-3 pt-3"> Réponse de {{ results.article.author }} :  
+										{{comments.admin_answer | striptags('<br><p>')|raw}}
+									</div>
+									{% endif %}
+								</div> 
+							</div>
+						{% endif %}
 					{% endfor %} 
 				</div>
 			</div>
@@ -89,10 +90,6 @@
 							<div >
 								{{ form.textarea ('comment', 'Votre commentaire', { class:'tinyMCE'})}}
 							</div>
-							
-
-
-								
 							<div class="row ">
 								<div class="col-md-4">
 									<button class="btn btn-primary backButton" type ="button">Retour</button>  
