--- a/views/comment/dashboardComments.twig
+++ b/views/comment/dashboardComments.twig
@@ -3,7 +3,9 @@
 {% block title %}Commentaires {% endblock %}
 
 {% import 'macro.twig' as form %}
+
 {% block content %}
+{% set csrf = csrf_input() %} 
 	<div class="articles">
 		<div class="">
 			<div class="col-md-12 row no-gutters">
@@ -27,23 +29,66 @@
 							</button>
 			            </div>
 
-
-
-			            <div class="col-md-12 text-justify">
-			            	<div class="col-md-12">
-			            		<div class="col-md-6 h3">
-			            			{{results.article.title}} 
-			            			<p class="h5">{{results.article.description}}
-			            			</p>
-			            		</div>
-			            		
-			            	</div>
-			            	<div class="col-md-12">
-			            		{{results.article.content|striptags('<br><p>')|raw}}
-			            	</div>
-			            </div>
+<div>				
+{% if results.comments == null %}
+		<div class="col-md-12 text-left h5 mt-5">
+			Aucun commentaire. 
+		</div>
+	{% endif %}
+	{% for key, comment in results.comments %} 
+		<div class="commentsVisibility bg-light {% if comment.publicated == 1 %} d-none {% endif %} ">
+		
+			<div class="row col-md-12 text-justify my-5 ">
+				<div class="col-md-12 mb-5  px-4 pt-3">
+					<div class="col-md-12 "> 
+						<a href="/admin/articles/{{comment.article_id}}"><h4 class="text-center my-3">Article : {{comment.article_title}}</h4></a>
+						<h5>Commentaire : </h5> 
+						<p>{{comment.comment}}</p>
+						<p>Auteur : {{comment.author}}</p>
+						<p>Date de création : {{comment.date_comment}}</p>
+					</div>
+					<div class="col-md-12">
+						<div class="d-flex align-items-center row">
+							<div class="col-md-6 text-left row">
+								<p class="col-md-3">Publier ? </p>
+								<form method="post"  class="col-md-6"> {{ csrf|raw }}
+									<div class="col-md-12">
+										<label for="published">non</label>
+										<input type="radio" name="published" value='0' {% if comment.publicated == 0 %}checked {% endif %}>
+										<label for="published">oui</label>
+										<input type="radio" id="Published" name="published" value="1" {% if comment.publicated == 1 %}checked {% endif %}>
+										<input type="hidden" name="id" value="{{comment.id}}">
+									</div>
+									<button class="btn btn-primary btn-sm col-md-6 mt-3" type="submit" name="update" value="published">Valider</button>
+								</form>
+							</div>
+							<div class="col-md-6 text-center mb-3 mt-4">
+								<form method="post">
+									{{ csrf|raw }}
+									
+									<input type="hidden" name="id" value="{{comment.id}}">
+									<button class="btn btn-primary " type="submit"  name="delete">Supprimer le commentaire</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div> 
+				<div class="col-md-12 mb-3 text-center"> 
+					<form method="post" >{{ csrf|raw }}
+						<h5 class="mb-3">Répondre au commentaire :</h5> 
+						{{ form.textarea ('adminAnswer', 'Répondre au commentaire', {value:comment.admin_answer, class:'tinyMCE', rows:8})}}
+							<input type="hidden" name="published" value="{{comment.publicated}}">
+							<input type="hidden" name="id" value="{{comment.id}}">
+							<button class="btn btn-primary btn-md" type="submit" name="update" value="answer">Valider</button>
 						
-						<div class=""> 
+					</form>
+				</div>
+			</div>
+		</div>
+	{% endfor %}
+</div>
+
+						<!-- <div class=""> 
 						{% for comment in results.comments %} 
 							<div class="commentsVisibility {% if comment.publicated == 1 %} d-none {% endif %} ">
 								<form method="post"> {{csrf_input()}}
@@ -85,7 +130,7 @@
 							</div>
 							
 						{% endfor %}
-						</div>
+						</div> -->
 						
 					</div>
 				</div>
