admin pages in progress
modification of comment and articles controller
html page of adminUser ok.

--- a/views/templates/layoutBack.twig
+++ b/views/templates/layoutBack.twig
@@ -85,7 +85,7 @@
         <div class="modal-body"></div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Annuler</button>
-          <a class="btn btn-primary" href="/connexion/logout">Se déconnecter</a>
+          <a class="btn btn-primary" href="/admin/logout">Se déconnecter</a>
         </div>
       </div>
     </div>
