--- a/views/user/inscriptionPage.Twig
+++ b/views/user/inscriptionPage.Twig
@@ -1,4 +1,4 @@
-{% extends "layoutFront.twig" %}
+{% extends "layoutBack.twig" %}
 
 {% block title %}Inscription{% endblock %}
 
@@ -46,7 +46,7 @@
 								<div class="col-lg-12 text-center">
 									<div id="success"></div>
 									<button class="btn btn-primary btn-xl text-uppercase" type="submit">Envoyer</button>
-									<button class="btn btn-primary btn-xl text-uppercase" type="reset">Réinitialiser</button>
+									
 								</div>
 							</div>
 						</form>
