--- a/views/user/settingsPage.twig
+++ b/views/user/settingsPage.twig
@@ -75,19 +75,21 @@
 							</div>
 						</div>
 					</form>
-				</div>
-				
-				<div class="col-md-12 my-5 py-5 bg-white">
-					<div class="text-center">
-						<h4>Suppression de votre compte </h4>
-						<p class="font-weight-light">(Cette action est irréversible)</p>
+				</div> 
+			
+				{% if session.user.is_admin == 0 %}
+					<div class="col-md-12 my-5 py-5 bg-light">
+						<div class="text-center">
+							<h4>Suppression de votre compte </h4>
+							<p class="font-weight-light">(Cette action est irréversible)</p>
+						</div>
+						<div class="col-md-10 d-flex justify-content-end pt-3">
+							<form class="" method="post">{{ csrf_input() }}
+								<button class="btn btn-primary confirmClose" type="submit" name="activate" value="0">Supprimer</button>
+							</form>
+						</div>
 					</div>
-					<div class="col-md-10 d-flex justify-content-end pt-3">
-						<form class="" method="post">{{ csrf_input() }}
-							<button class="btn btn-primary" type="submit" name="delete" value="true">Supprimer</button>
-						</form>
-					</div>
-				</div>
+				{% endif %}
 			</div>
 	  	</div>
 	</section>
