--- a/views/templates/navbarLG.twig
+++ b/views/templates/navbarLG.twig
@@ -43,6 +43,12 @@
                 <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                   Paramètres
               </a>
+          {% if session.user.is_admin == 1 %}
+              <a class="dropdown-item" href="/admin/users">
+                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Tableau de bord utilisateur
+              </a>
+          {% endif %}
               <div class="dropdown-divider">
               </div>
               <a class="dropdown-item" href="#logoutModal" data-toggle="modal" >
